# LaTeXEditor

./: .gitignore  .syncignore  BUILD_WINDOWS.md  CLAUDE.md  CMakeLists.txt  INSTALL_QT6.md  Info.plist.in  SHORTCUTS.md  SYNC_README.md  build.ps1  find_qt.ps1  readme.md  resources.qrc  sync.sh
.github/workflows/: build.yml  linux-build.yml  mac-build.yml  main.yml
include/: latex_editor.h
src/: LaTeXHighlighter.cpp  LaTeXHighlighter.h  main.cpp
src/controllers/: AutoSaveController.cpp  AutoSaveController.h  EditorController.cpp  EditorController.h  FileController.cpp  FileController.h  LatexToolbarController.cpp  LatexToolbarController.h  PreviewController.cpp  PreviewController.h
src/models/: DocumentModel.cpp  DocumentModel.h  ProjectModel.cpp  ProjectModel.h  Theme.cpp  Theme.h
src/utils/: CodeEditor.cpp  CodeEditor.h  LaTeXErrorChecker.cpp  LaTeXErrorChecker.h  LaTeXHighlighter.cpp  LaTeXHighlighter.h  LaTeXToHtmlConverter.cpp  LaTeXToHtmlConverter.h  SpellCheckHighlighter.cpp  SpellCheckHighlighter.h  SpellChecker.cpp  SpellChecker.h  ThemeManager.cpp  ThemeManager.h
src/views/: FindReplaceDialog.cpp  FindReplaceDialog.h  LatexToolbar.cpp  LatexToolbar.h  MainWindow.cpp  MainWindow.h  PreviewWindow.cpp  PreviewWindow.h  ProjectTreeWidget.cpp  ProjectTreeWidget.h
